@@ -14,6 +14,7 @@ from s3ql.common import (get_backend, QuietError, unlock_bucket,
                          cycle_metadata, dump_metadata, create_tables,
                          setup_logging, get_bucket_home)
 from s3ql.backends import s3
+from s3ql.backends.local import Bucket as LocalBucket
 from s3ql.parse_args import ArgumentParser
 from s3ql import CURRENT_FS_REV
 from getpass import getpass
@@ -211,7 +212,7 @@ def upgrade(bucket):
     # Access to protected member
     #pylint: disable=W0212
     log.info('Getting file system parameters..')
-    seq_nos = [ int(x[len('s3ql_seq_no_'):]) for x in bucket.list('s3ql_seq_no_') ]
+    seq_nos = list(bucket.list('s3ql_seq_no_')) 
     if not seq_nos:
         raise QuietError(textwrap.dedent(''' 
             File system revision too old to upgrade!
@@ -220,8 +221,14 @@ def upgrade(bucket):
             revision before you can use this version to upgrade to the newest
             revision.
             '''))                     
+    elif (isinstance(bucket, LocalBucket) and
+         (seq_nos[0].endswith('.meta') or seq_nos[0].endswith('.dat'))):
+        param = bucket.lookup('s3ql_metadata.meta')
+        seq_nos = [ int(x[len('s3ql_seq_no_'):-4]) for x in seq_nos if x.endswith('.dat') ]                 
+    else:
+        param = bucket.lookup('s3ql_metadata')
+        seq_nos = [ int(x[len('s3ql_seq_no_'):]) for x in seq_nos ]
     seq_no = max(seq_nos)
-    param = bucket.lookup('s3ql_metadata')
 
     # Check for unclean shutdown
     if param['seq_no'] < seq_no:
@@ -274,6 +281,25 @@ def upgrade(bucket):
     if sys.stdin.readline().strip().lower() != 'yes':
         raise QuietError()
 
+    log.info('Upgrading from revision %d to %d...', CURRENT_FS_REV - 1,
+             CURRENT_FS_REV)
+    param['revision'] = CURRENT_FS_REV
+    
+    if isinstance(bucket, LocalBucket):
+        for (path, _, filenames) in os.walk(bucket.name, topdown=True):
+            for name in filenames:
+                if name.endswith('.dat'):
+                    continue
+                 
+                basename = os.path.splitext(name)[0]
+                os.rename(os.path.join(path, name),
+                          os.path.join(path, basename))
+                with open(os.path.join(path, basename), 'r+b') as dst:
+                    dst.seek(0, os.SEEK_END)
+                    with open(os.path.join(path, basename + '.dat'), 'rb') as src:
+                        shutil.copyfileobj(src, dst)
+                os.unlink(os.path.join(path, basename + '.dat'))
+                     
     # Download metadata
     log.info("Downloading & uncompressing metadata...")
     dbfile = tempfile.NamedTemporaryFile()
@@ -284,17 +310,6 @@ def upgrade(bucket):
     log.info('Reading metadata...')
     restore_legacy_metadata(fh, db)
     fh.close()
-    
-    log.info('Upgrading from revision %d to %d...', CURRENT_FS_REV - 1,
-             CURRENT_FS_REV)
-    param['revision'] = CURRENT_FS_REV
-    
-    log.info('Updating symlinks..')
-    for (id_, mode, target) in db.query('SELECT id, mode, target '
-                                        'FROM inodes JOIN symlink_targets ON id == inode'):
-        if stat.S_ISLNK(mode):
-            db.execute('UPDATE inodes SET size=? WHERE id=?',
-                       (len(target), id_))
     
     # Increase metadata sequence no
     param['seq_no'] += 1
