@@ -164,10 +164,16 @@ def get_backend(storage_url, homedir, use_ssl):
 
 def get_seq_no(bucket):
     '''Get current metadata sequence number'''
-        
-    seq_nos = [ int(x[len('s3ql_seq_no_'):]) for x in bucket.list('s3ql_seq_no_') ]
-    if not seq_nos:
+       
+    from s3ql.backends.local import Bucket as LocalBucket
+     
+    seq_nos = list(bucket.list('s3ql_seq_no_')) 
+    if (not seq_nos or
+        (isinstance(bucket, LocalBucket) and
+         (seq_nos[0].endswith('.meta') or seq_nos[0].endswith('.dat')))): 
         raise QuietError('Old file system revision, please run `s3qladm upgrade` first.')
+    
+    seq_nos = [ int(x[len('s3ql_seq_no_'):]) for x in seq_nos ]
     seq_no = max(seq_nos) 
     for i in [ x for x in seq_nos if x < seq_no - 10 ]:
         try:
