@@ -3,6 +3,9 @@ UNRELEASED, S3QL TIP
   * There is a new --nfs option for mount.s3ql that needs to be used
     when the S3QL file system will be exported over NFS.
 
+  * The local backend now stores data and metadata in the same file,
+    so it needs only half as many files as before.
+
 2011-07-23, S3QL 1.1 (development version)
 
   * Restructured metadata. This should also significantly reduce the
